Chapters with overflow from begining fix

--- a/client/stylesheets/sass/partials/_videobox.scss
+++ b/client/stylesheets/sass/partials/_videobox.scss
@@ -242,11 +242,10 @@
     width: 300px;
     position: absolute;
     right: 10%;
-    top: -336px;
-    margin-left: -150px;
+    margin-left: -154px;
     bottom: 35%;
     display: none;
-    z-index: 2;
+    z-index: 0;
     background-color: rgba(0, 0, 0, .7);
     border-radius: 15px;
 
